# GBDTMO

./: LICENSE  README.md  make.sh  setup.py
Examples/: MSE_example.ipynb
docs/: api.rst  conf.py  example.rst  index.rst  parameters.rst
docs/_static/: extra.css
examples/: parameter_select.sh  test.py
gbdtmo/: __init__.py  gbdtmo.py  histogram.py  lib_utils.py  plotting.py  wrapper.py
src/: CMakeLists.txt  api.cpp  booster.cpp  booster.h  dataStruct.cpp  dataStruct.h  io.cpp  io.h  loss.cpp  loss.h  main.cpp  mathFunc.cpp  mathFunc.h  tree.cpp  tree.h
